fix spacing on members page

--- a/_sass/_members.scss
+++ b/_sass/_members.scss
@@ -2,20 +2,30 @@
   * Group member layouts
   */
 
+.helper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.group-member {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+
 .group-member-photo {
-  grid-column: 1 / 3;
-  align-content: center;
+  grid-column: span 3;
   justify-content: center;
-  vertical-align: text-top;
 }
 
 .group-member-bio {
-  grid-column: 4 / 9;
+  grid-column: 4 / span 9;
 }
 
 .group-member-photo img {
   width: 200px;
-  padding-top: 50px;
+  padding-right: 10px;
+  vertical-align: middle;
 }
 
 .group-member-bio h3 {
@@ -29,11 +39,14 @@
   .group-member-photo {
     grid-column: span 4;
   }
+  .group-member-bio {
+      grid-column: span 8;
+  }
 }
 
 @media (max-width: 768px) {
   .group-member-photo {
     padding-top: 0;
-    grid-column: span 8;
+    grid-column: span 9;
   }
 }
